k8s/monolith.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    stack: p3
spec:
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: worker
  # replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: worker
        stack: p3
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: worker
        image: mastercloudapps/pa-worker:1.0
