k8s/microservices.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices
spec:
  selector:
    matchLabels:
      app: microservices
  template:
    metadata:
      labels:
        app: microservices
    spec:
      containers:
      - name: microservices
        image: pangliter/microservices-java-jib-f3
---
apiVersion: v1
kind: Service
metadata:
  name: microservices
  labels:
    app: microservices
spec:
  ports:
    - port: 8080
      targetPort: 8090
  selector:
    app: microservices
  type: NodePort
